--- a/config/apiserver/aggregated-apiserver.yaml
+++ b/config/apiserver/aggregated-apiserver.yaml
@@ -31,12 +31,10 @@ spec:
             - "--tls-cert-file=/apiserver.local.config/certificates/tls.crt"
             - "--tls-private-key-file=/apiserver.local.config/certificates/tls.key"
             - "--audit-log-path=-"
-            - "--feature-gates=APIPriorityAndFairness=false"
+            - "--enable-priority-and-fairness=false" # k8s 1.29+ only
+            - "--disable-admission-plugins=ValidatingAdmissionPolicy" # k8s 1.30+ only
             - "--audit-log-maxage=0"
             - "--audit-log-maxbackup=0"
-          envFrom:
-            - configMapRef:
-                name: apiserver-envs
           resources:
             requests:
               cpu: 100m
